tests/blackbox_tests/desktop-entry-syntax-error-3.desktop
# E: syntax-error-in-desktop-entry stray line 3

Type = Application
Name = Gizmo Enhancer
